network_policy/xm-ai/merge/batch/batch_allow.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: batch-job-can-access-db
  namespace: pre-xmai-batch
spec:
  podSelector: {}
  egress:
  # dns
  - to:
    - namespaceSelector:
        matchLabels:
          logic_zone: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  # db
  - to:
    - ipBlock:
        cidr: "192.168.255.76/32"
    ports:
    - protocol: TCP
      port: 3309

  # apiserver
  - to:
    - ipBlock:
        cidr: "192.168.255.43/32"
    - ipBlock:
        cidr: "192.168.255.56/32"
    ports:
    - protocol: TCP
      port: 6443
  # minio
  - to:
    - ipBlock:
        cidr: "192.168.255.169/32"
    - ipBlock:
        cidr: "192.168.255.141/32"
    - ipBlock:
        cidr: "192.168.255.65/32"
    - ipBlock:
        cidr: "192.168.255.12/32"
    ports:
    - protocol: TCP
      port: 9000
    - protocol: TCP
      port: 9021
