network_policy/xm-ai/merge/batch/batch_deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: batch-all-egress-deny
  namespace: pre-xmai-batch
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
